fixed so content in todoEntry is propterly aligned

--- a/src/components/Todo/TodoEntry/TodoEntry.css
+++ b/src/components/Todo/TodoEntry/TodoEntry.css
@@ -142,8 +142,9 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    width: auto;
+    width: 10px;
     height: auto;
+    overflow: visible;
 }
 
 .information-top {
